--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,10 @@ version = "1.7.0"
 
 [deps]
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
+Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
+SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 
 [weakdeps]
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
@@ -15,11 +18,14 @@ MultiObjectiveAlgorithmsPolyhedraExt = "Polyhedra"
 
 [compat]
 Combinatorics = "1"
+Distributed = "1.11.0"
 HiGHS = "1"
 Ipopt = "1"
 JSON = "1"
+JuMP = "1.29.2"
 MathOptInterface = "1.19"
 Polyhedra = "0.8"
+SharedArrays = "1.11.0"
 Test = "1"
 julia = "1.10"
 
@@ -27,8 +33,8 @@ julia = "1.10"
 HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
 test = ["HiGHS", "Ipopt", "JSON", "Test", "Polyhedra"]
